--- a/main.css
+++ b/main.css
@@ -193,17 +193,18 @@ p {
     width: 100%;
     max-width: 320px; 
     /* 中央寄せ */
-    margin-left: auto;
-    margin-right: auto;
+    margin: 15px auto;
 }
 
 /* iframe（子要素）を親要素いっぱいに広げる */
 .project-video-wrapper iframe {
     position: absolute;
-    top: 0;
-    left: 0;
+    aspect-ratio: 16/9;
     width: 100%;
-    height: 100%;
+    height: auto;
+    border-radius: 6px;
+    display: block;
+    border: none;
 }
 
 
@@ -230,8 +231,5 @@ p {
     .projects-grid {
         /* スマホでは1列にする (はみ出し対策) */
         grid-template-columns: 1fr;
-    }
-    .project-video-wrapper {
-        width: 100%;
     }
 }
